create github pages

--- a/offer.html
+++ b/offer.html
@@ -70,7 +70,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a site for free</a></section><section class="mbr-section article content1 cid-r7kKz8aqgo" id="content1-d">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section article content1 cid-r7kKz8aqgo" id="content1-d">
     
      
 
@@ -212,7 +212,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2018-2019 - VostTorg.ru.<br> <a href="mailto:info@vost-torg.ru">info@vost-torg.ru</a><br><a href="https://www.linkedin.com/company/vost-torg/about/">LinkedIn</a><a href="https://www.linkedin.com/company/vost-torg/about/"><br></a></p>
+                    © Copyright 2018-2019 - Vost-Torg.ru.<br> <a href="mailto:info@vost-torg.ru">info@vost-torg.ru</a><br><a href="https://www.linkedin.com/company/vost-torg/about/">LinkedIn</a><a href="https://www.linkedin.com/company/vost-torg/about/"><br></a></p>
             </div>
         </div>
     </div>
